Fix blurry yos

--- a/app/styles/trigger-styles.css
+++ b/app/styles/trigger-styles.css
@@ -309,15 +309,19 @@
 	transform: scale(1);
 }
 .__MSG_@@extension_id__-clickable-yo-trigger:hover img {
-	top: -13px !important;
+	top: -16px !important;
 	transition:all .3s ease-in-out !important;
 }
 .__MSG_@@extension_id__-clickable-yo-trigger:after {
 	content:"" !important;
 	position: absolute !important;
-	width: 22px !important;
-	height: 22px !important;
+	width: 30px !important;
+	height: 30px !important;
 	top: 0 !important;
+}
+.__MSG_@@extension_id__-clickable-yo-trigger:hover:after {
+	width: 24px;
+	height: 24px;
 }
 
 .__MSG_@@extension_id__-clickable-yo-trigger-youtube .__MSG_@@extension_id__-image-hidden {
@@ -350,21 +354,21 @@
 @-webkit-keyframes __MSG_@@extension_id__-clickable-yo-trigger-grow {
 	0% {
 		opacity: 1;
-		-webkit-transform: scale(1.4);
+		-webkit-transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		-webkit-transform: scale(2.1);
+		-webkit-transform: scale(1.8);
 	}
 }
 @keyframes __MSG_@@extension_id__-clickable-yo-trigger-grow {
 	0% {
 		opacity: 1;
-		transform: scale(1.4);
+		transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		-webkit-transform: scale(2.1);
+		-webkit-transform: scale(1.8);
 	}
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-timeout {
